changing 3omala to zaba2in

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Karni | إدارة ديون العملاء</title>
-    <meta name="description" content="تطبيق لإدارة ديون العملاء بكل سهولة - Gérez les crédits de vos clients facilement" />
+    <title>Smart Karni | إدارة ديون الزبائن</title>
+    <meta name="description" content="تطبيق لإدارة ديون الزبائن بكل سهولة - Gérez les crédits de vos clients facilement" />
     <meta name="author" content="Smart Karni" />
     <meta name="keywords" content="smart karni, credit, crédit, dette, دين, morocco, maroc, المغرب" />
 
     <meta property="og:title" content="Smart Karni" />
-    <meta property="og:description" content="تطبيق لإدارة ديون العملاء بكل سهولة" />
+    <meta property="og:description" content="تطبيق لإدارة ديون الزبائن بكل سهولة" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://smartkarni.com" />
     <meta property="og:image" content="https://smartkarni.com/og-image.png" />
@@ -17,7 +17,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Smart Karni" />
-    <meta name="twitter:description" content="تطبيق لإدارة ديون العملاء بكل سهولة" />
+    <meta name="twitter:description" content="تطبيق لإدارة ديون الزبائن بكل سهولة" />
     <meta name="twitter:image" content="https://smartkarni.com/og-image.png" />
   </head>
 
